bringup: strict v0.3 full-stack gate + v03 vector suite

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,9 @@ docs/architecture/isa-manual/.bundle/
 # ctuning milepost runner outputs
 tools/ctuning/out/
 
+# PTO bridge example outputs (generated)
+tools/pto/out/
+
 # Workloads harness outputs
 workloads/generated/
 workloads/benchmarks/out/
